--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,15 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
-    maven { url "https://jitpack.io" }
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
-    compile 'com.github.jacek-marchwicki:JavaWebsocketClient:master-SNAPSHOT'
+    compile 'io.reactivex:rxjava:1.3.0'
+    compile 'org.hibernate:hibernate-core:5.1.7.Final'
+    compile 'com.squareup.okhttp3:okhttp:3.8.0'
+    compile 'mysql:mysql-connector-java:6.0.6'
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'org.apache.logging.log4j:log4j-core:2.8.2'
 }
